resolve codacy issues