@@ -104,7 +104,7 @@ public class BuildLogEntryService {
     private boolean isErrorLog(String log) {
         return log.startsWith("[ERROR] [Help 1]") || log.startsWith("[ERROR] For more information about the errors and possible solutions")
                 || log.startsWith("[ERROR] Re-run Maven using") || log.startsWith("[ERROR] To see the full stack trace of the errors") || log.startsWith("[ERROR] -> [Help 1]")
-                || log.startsWith("[ERROR] Failed to execute goal org.apache.maven.plugins") || log.equals("[ERROR] ");
+                || log.startsWith("[ERROR] Failed to execute goal org.apache.maven.plugins") || "[ERROR] ".equals(log);
     }
 
     /**
@@ -117,15 +117,12 @@ public class BuildLogEntryService {
      */
     public boolean checkIfBuildLogIsNotADuplicate(List<BuildLogEntry> buildLogs, String shortenedLogString) {
         // E.g. Swift produces a lot of duplicate build logs when a build fails
-        if (buildLogs.size() > 0) {
+        if (!buildLogs.isEmpty()) {
             var existingLog = buildLogs.stream().filter(log -> log.getLog().equals(shortenedLogString)).findFirst();
             String lastLog = buildLogs.get(buildLogs.size() - 1).getLog();
-            // If the log does not exist already or if the log is a single empty log add it to the build logs (avoid more than one empty log in a row)
-            boolean isSingleEmptyLog = shortenedLogString.trim().isEmpty() && !lastLog.trim().isEmpty();
-            if (existingLog.isEmpty() || isSingleEmptyLog) {
-                return true;
-            }
-            return false;
+            // If the log does not exist already or if the log is a single blank log add it to the build logs (avoid more than one empty log in a row)
+            boolean isSingleBlankLog = shortenedLogString.isBlank() && !lastLog.isBlank();
+            return existingLog.isEmpty() || isSingleBlankLog;
         }
         return true;
     }
